# RAMP

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs  storage.rs
src/io/: app-window.slint
src/storage/: core.rs  env.rs  init.rs  metadata.rs  structs.rs
src/storage/core/: env.rs  getters.rs  init.rs  metadata.rs  search.rs
