[package]
name = "RAMP"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.16.1"
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
cpal = "0.18.1"
symphonia = "0.6.0"
lofty = "0.24.0"
tokio = { version = "1", features = ["full"] }
serde = "1.0.228"
thiserror = "2.0.18"
tracing = "0.1.44"
dirs = "6.0.0"
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.16.1"